--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "fiori-react-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://leoooob.github.io/fiori-react/",
   "dependencies": {
     "fundamental-react": "^0.3.1",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-scripts": "2.1.3"
@@ -11,6 +13,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
