--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#f05f40",
+  "theme_color": "#fff",
   "background_color": "#f8f8f8"
 }
