--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,15 @@
 {
-  "short_name": "Top News",
-  "name": "Top News",
+  "short_name": "React App",
+  "name": "Create React App Sample",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
-    },
-    {
-      "src": "android-chrome-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#fff",
-  "background_color": "#f8f8f8"
+  "theme_color": "#000000",
+  "background_color": "#ffffff"
 }
